made all of the valley edits

--- a/html/about.html
+++ b/html/about.html
@@ -156,7 +156,7 @@
 
     <section id="communities" class="container">
         <h2><span>Building</span> Strong Relationships</h2>
-        <p class="sub-text">Valley construction supply builds long lasting strong relationships 
+        <p class="sub-text">Valley Construction Supply builds long lasting strong relationships 
             through networking, customer service, and knowledgeable sales staff.</p>
         <div class="experience">
             <div class="image-box">
@@ -170,31 +170,13 @@
                 <h3>Need a contractor? We know contractors</h3>
                 <P>If your home builder  needs a quality foundation, excavator or a framing 
                    contractor we have those strong relationships to pass on, we do the same 
-                   for our long time customers looking for new business and new relationships. 
-                   We call it the art of “NETWORKING”: Connecting hard working, integrity driven  
-                   contractors with the top quality home builders in the greater Puget sound 
-                   area.</P>
+                   for our long time customers looking for new business and new relationships. If you are in need of a foundation, excavation or framing contractor, our sales staff can
+                   refer high quality contractors in the great Puget Sound region.</P>
                 <button class="solid gallery-button"  type="button" onclick="location.href='services.html'">
                     SEE OUR SERVICES
                 </button>
             </div>
         </div>
-    </section>
-
-    <!-- ============================================ -->
-	<!--                   MISSION                    -->
-    <!-- ============================================ -->
-
-    <section id="mission">
-        <div class="mission-content">
-        <h2 class="container">Our Mission:</h2>
-        <p class="container">We strive to be loyal to our partners, 
-            build long lasting relationships with our customers, built on integrity while offering top-notch 
-            next day service to our customers. We have always offered fair pricing and spot on billing and most 
-            importantly our word is our bond.</p>
-        </div>
-        <div aria-hidden="true" class="clippy-desktop-yellow"></div>  
-        <div aria-hidden="true" class="clippy-desktop"></div>              
     </section>
 
     <!-- ============================================ -->
@@ -406,10 +388,10 @@
                 <h3>Quick Links</h3>
                 <div aria-hidden="true" class="item-line"></div>
                 <a href="services.html">Services</a>
-                <a href="#sales">Sales Team</a>
+                <a href="about.html#sales">Sales Team</a>
                 <a href="about.html">About</a>
                 <a href="materials.html">Products</a>
-                <a href="rebar-fabrication.html">Rebar Fabrication</a>
+                <a href="rebar-fabrication.html" class="rebar-link">Rebar Fabrication</a>
                 <a href="contact.html">Contact</a>
             </div>
             <div class="footer-item">
@@ -441,24 +423,27 @@
                 <div aria-hidden="true" class="item-line"></div>
 
                 <div class="footer-location location">
-                    <div class="icon valley-footer-icon">
-                        <i aria-hidden="true" class="fas fa-phone"></i>
-                    </div>
-                    <div class="footer-location-info">
-                        <p class="uppercase">Marysville, WA</p>
-                        <p>(800) 559-8566</p>
-                    </div>
-                </div>
-
-                <div class="location footer-location">
-                    <div class="icon valley-footer-icon">
+                    <div class="icon valley-footer-icon phone-icon">
                         <i aria-hidden="true" class="fas fa-phone"></i>
                     </div>
                     <div class="footer-location-info">
                         <p class="uppercase">Pacific, WA</p>
-                        <p>(800) 922-2082</p>
+                        <p>Phone: (800) 922-2082</p>
+                        <p>Fax: (206) 343-5840</p>
                     </div>
                 </div>
+
+                <div class="location footer-location">
+                    <div class="icon valley-footer-icon phone-icon">
+                        <i aria-hidden="true" class="fas fa-phone"></i>
+                    </div>
+                    <div class="footer-location-info">
+                        <p class="uppercase">Marysville, WA</p>
+                        <p>Phone: (800) 559-8566</p>
+                        <p>Fax: (360) 653-7855</p>
+                    </div>
+                </div>
+                <p>Email: sales7@<br>valleyconstructionsupply.com</p>
             </div>
         </div>
         <div class="branding">
