--- a/html/jobs.html
+++ b/html/jobs.html
@@ -162,8 +162,8 @@
                 terminate the employment relationship at any time, without or without notice and with
                 or without cause.”
             </p>
-            <p class="bottom-p">Thank you for completing this application form and our interest in employment with us.
-                We would like to assure you that your opportunzity for employment with this company
+            <p class="bottom-p">Thank you for completing this application form and your interest in employment with us.
+                We would like to assure you that your opportunity for employment with this company
                 will be based only on your merit and on no other consideration.</p>
 
             <h3 class="jobs-h3">Click on a job to see the requirements, benefits, and responsibilities for each job we are hiring for. </h3>
@@ -216,10 +216,10 @@
                 <h3>Quick Links</h3>
                 <div aria-hidden="true" class="item-line"></div>
                 <a href="services.html">Services</a>
-                <a href="contact.html">Sales Team</a>
+                <a href="about.html#sales">Sales Team</a>
                 <a href="about.html">About</a>
-                <a href="products.html">Products</a>
-                <a href="rebar-fabrication.html">Rebar Fabrication</a>
+                <a href="materials.html">Products</a>
+                <a href="rebar-fabrication.html" class="rebar-link">Rebar Fabrication</a>
                 <a href="contact.html">Contact</a>
             </div>
             <div class="footer-item">
@@ -251,24 +251,27 @@
                 <div aria-hidden="true" class="item-line"></div>
 
                 <div class="footer-location location">
-                    <div class="icon valley-footer-icon">
-                        <i aria-hidden="true" class="fas fa-phone"></i>
-                    </div>
-                    <div class="footer-location-info">
-                        <p class="uppercase">Marysville, WA</p>
-                        <p>(800) 559-8566</p>
-                    </div>
-                </div>
-
-                <div class="location footer-location">
-                    <div class="icon valley-footer-icon">
+                    <div class="icon valley-footer-icon phone-icon">
                         <i aria-hidden="true" class="fas fa-phone"></i>
                     </div>
                     <div class="footer-location-info">
                         <p class="uppercase">Pacific, WA</p>
-                        <p>(800) 922-2082</p>
+                        <p>Phone: (800) 922-2082</p>
+                        <p>Fax: (206) 343-5840</p>
                     </div>
                 </div>
+
+                <div class="location footer-location">
+                    <div class="icon valley-footer-icon phone-icon">
+                        <i aria-hidden="true" class="fas fa-phone"></i>
+                    </div>
+                    <div class="footer-location-info">
+                        <p class="uppercase">Marysville, WA</p>
+                        <p>Phone: (800) 559-8566</p>
+                        <p>Fax: (360) 653-7855</p>
+                    </div>
+                </div>
+                <p>Email: sales7@<br>valleyconstructionsupply.com</p>
             </div>
         </div>
         <div class="branding">
