--- a/html/materials.html
+++ b/html/materials.html
@@ -297,16 +297,67 @@
 
     <section id="partners" class="container">
         <h2 class="heading-lines container"><span>OUR</span> PARTNERS</h2>
-        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/advantech.jpg" alt=""></div>
-        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/strong-tie.jpg" alt=""></div>
-        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/insulfoam.jpg" alt=""></div>
-        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/wey.png" alt=""></div>
-        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/activar.jpg" alt=""></div>
-        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/jl-industries.png" alt=""></div>
-        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/quick-flash.jpg" alt=""></div>
-        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/meadow-burke.png" alt=""></div>
-        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/joto-vent.png" alt=""></div>
-        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/super-anchor.png" alt=""></div>
+
+        <div class="image-box">
+            <div aria-hidden="true" class="yellow">
+                <a href="https://www.huberwood.com/" target="_blank"></a>
+            </div>
+            <img src="/images/advantech.jpg" alt="">
+        </div>
+        <div class="image-box">
+            <div aria-hidden="true" class="yellow">
+                <a href="https://www.strongtie.com/" target="_blank"></a>
+            </div>
+            <img src="/images/strong-tie.jpg" alt="">
+        </div>
+        <div class="image-box">
+            <div aria-hidden="true" class="yellow">
+                <a href="https://www.insulfoam.com/" target="_blank"></a>
+            </div>
+            <img src="/images/insulfoam.jpg" alt="">
+        </div>
+        <div class="image-box">
+            <div aria-hidden="true" class="yellow">
+                <a href="https://www.weyerhaeuser.com/" target="_blank"></a>
+            </div>
+            <img src="/images/wey.png" alt="">
+        </div>
+        <div class="image-box">
+            <div aria-hidden="true" class="yellow">
+                <a href="https://www.activar.com/" target="_blank"></a>
+            </div>
+            <img src="/images/activar.jpg" alt="">
+        </div>
+        <div class="image-box">
+            <div aria-hidden="true" class="yellow">
+                <a href="http://www.activarcpg.com/jl-industries" target="_blank"></a>
+            </div>
+            <img src="/images/jl-industries.png" alt="">
+        </div>
+        <div class="image-box">
+            <div aria-hidden="true" class="yellow">
+                <a href="http://www.quickflashproducts.com/" target="_blank"></a>
+            </div>
+            <img src="/images/quick-flash.jpg" alt="">
+        </div>
+        <div class="image-box">
+            <div aria-hidden="true" class="yellow">
+                <a href="https://meadowburke.com/" target="_blank"></a>
+            </div>
+            <img src="/images/meadow-burke.png" alt="">
+        </div>
+        <div class="image-box">
+            <div aria-hidden="true" class="yellow">
+                <a href="https://joto-vent.com/" target="_blank"></a>
+            </div>
+            <img src="/images/joto-vent.png" alt="">
+        </div>
+        <div class="image-box">
+            <div aria-hidden="true" class="yellow">
+                <a href="https://superanchor.com/" target="_blank"></a>
+            </div>
+            <img src="/images/super-anchor.png" alt="">
+        </div>
     </section>
 
     <!-- ============================================ -->
@@ -340,10 +391,10 @@
                 <h3>Quick Links</h3>
                 <div aria-hidden="true" class="item-line"></div>
                 <a href="services.html">Services</a>
-                <a href="contact.html">Sales Team</a>
+                <a href="about.html#sales">Sales Team</a>
                 <a href="about.html">About</a>
-                <a href="products.html">Products</a>
-                <a href="rebar-fabrication.html">Rebar Fabrication</a>
+                <a href="materials.html">Products</a>
+                <a href="rebar-fabrication.html" class="rebar-link">Rebar Fabrication</a>
                 <a href="contact.html">Contact</a>
             </div>
             <div class="footer-item">
@@ -375,24 +426,27 @@
                 <div aria-hidden="true" class="item-line"></div>
 
                 <div class="footer-location location">
-                    <div class="icon valley-footer-icon">
-                        <i aria-hidden="true" class="fas fa-phone"></i>
-                    </div>
-                    <div class="footer-location-info">
-                        <p class="uppercase">Marysville, WA</p>
-                        <p>(800) 559-8566</p>
-                    </div>
-                </div>
-
-                <div class="location footer-location">
-                    <div class="icon valley-footer-icon">
+                    <div class="icon valley-footer-icon phone-icon">
                         <i aria-hidden="true" class="fas fa-phone"></i>
                     </div>
                     <div class="footer-location-info">
                         <p class="uppercase">Pacific, WA</p>
-                        <p>(800) 922-2082</p>
+                        <p>Phone: (800) 922-2082</p>
+                        <p>Fax: (206) 343-5840</p>
                     </div>
                 </div>
+
+                <div class="location footer-location">
+                    <div class="icon valley-footer-icon phone-icon">
+                        <i aria-hidden="true" class="fas fa-phone"></i>
+                    </div>
+                    <div class="footer-location-info">
+                        <p class="uppercase">Marysville, WA</p>
+                        <p>Phone: (800) 559-8566</p>
+                        <p>Fax: (360) 653-7855</p>
+                    </div>
+                </div>
+                <p>Email: sales7@<br>valleyconstructionsupply.com</p>
             </div>
         </div>
         <div class="branding">
