--- a/html/services.html
+++ b/html/services.html
@@ -393,10 +393,10 @@
                 <h3>Quick Links</h3>
                 <div aria-hidden="true" class="item-line"></div>
                 <a href="services.html">Services</a>
-                <a href="contact.html">Sales Team</a>
+                <a href="about.html#sales">Sales Team</a>
                 <a href="about.html">About</a>
-                <a href="products.html">Products</a>
-                <a href="rebar-fabrication.html">Rebar Fabrication</a>
+                <a href="materials.html">Products</a>
+                <a href="rebar-fabrication.html" class="rebar-link">Rebar Fabrication</a>
                 <a href="contact.html">Contact</a>
             </div>
             <div class="footer-item">
@@ -428,24 +428,27 @@
                 <div aria-hidden="true" class="item-line"></div>
 
                 <div class="footer-location location">
-                    <div class="icon valley-footer-icon">
-                        <i aria-hidden="true" class="fas fa-phone"></i>
-                    </div>
-                    <div class="footer-location-info">
-                        <p class="uppercase">Marysville, WA</p>
-                        <p>(800) 559-8566</p>
-                    </div>
-                </div>
-
-                <div class="location footer-location">
-                    <div class="icon valley-footer-icon">
+                    <div class="icon valley-footer-icon phone-icon">
                         <i aria-hidden="true" class="fas fa-phone"></i>
                     </div>
                     <div class="footer-location-info">
                         <p class="uppercase">Pacific, WA</p>
-                        <p>(800) 922-2082</p>
+                        <p>Phone: (800) 922-2082</p>
+                        <p>Fax: (206) 343-5840</p>
                     </div>
                 </div>
+
+                <div class="location footer-location">
+                    <div class="icon valley-footer-icon phone-icon">
+                        <i aria-hidden="true" class="fas fa-phone"></i>
+                    </div>
+                    <div class="footer-location-info">
+                        <p class="uppercase">Marysville, WA</p>
+                        <p>Phone: (800) 559-8566</p>
+                        <p>Fax: (360) 653-7855</p>
+                    </div>
+                </div>
+                <p>Email: sales7@<br>valleyconstructionsupply.com</p>
             </div>
         </div>
         <div class="branding">
