--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
                     <h3>Erosion Control</h3>
                     <div class="card-line"></div>
                     <p>We offer a wide variety of Erosion Control Products, from Poly Sheeting, Catch Basin Socks, 
-                       Poly Sand Bags, Reinforced Filter Fence, and numerous other Geotextile Products including 
-                       Straw Bales, T/Post, Wood Stakes, and Straw Waddles.
+                       Nylon Sand Bags, Reinforced Filter Fence, and numerous other Geotextile Products including 
+                       Straw Bales, T/Post, Wood Stakes, and Straw Wattles.
                     </p>
                     <button type="button" onclick="location.href='html/services.html'">
                         Read More<i class="fas fa-chevron-right"></i>
@@ -229,7 +229,9 @@
         <div class="about-dark"></div>
         <div class="about-container container">
             <div class="about-content">
-                <h2 class="heading-lines"><span>ABOUT</span> VALLEY</h2>
+                <h2 class="heading-lines"><span>ABOUT</span> VALLEY CONSTRUCTION SUPPLY</h2>
+                <h3>Next day delivery, quality products and superior
+                    customer service since 1982.</h3>
                 <img src="../images/worker.jpg" alt="iron worker pulling something" width="300" height="300">
                 <div class="about-box">
                     <h3><span>Committed to</span> superior quality and results</h3>
@@ -336,8 +338,10 @@
     <section id="building-the-future">
         <div class="future-topper container">
             <h2 class="heading-lines"><span>BUILDING</span> THE FUTURE</h2>
-            <p>Here at Valley Construction Supply we believe it is essential to provide our customers with
-                up to date product knowledge and consistent fair pricing. Our sales professionals
+            <p>At Valley Construction Supply we know the importance of staying up to date as
+                well as looking ahead at the products for the builders in our region. Our sales staff is
+                provided with continued product knowledge training to assist in the ever-changing
+                building industry. Valley Construction Supply is here to help build the future.
             </p>
             <div class="future-icons">
                 <div class="icon-group">
@@ -538,8 +542,9 @@
                     While years build experience, they also build relationships 
                 </h3>
                 <p>
-                   Weyerhaeuser has been a trusted partner of ours since the day we opened
-                   our doors over 35 years ago. They are the premier company for rebar manufacturing.
+                    Weyerhaeuser has been a trusted partner of ours since the very beginning,
+                    almost 35 years ago. As a premier vendor, they are our number one resource for rebar
+                    distribution.
                 </p>
                 <button class="solid showcase-button"  type="button" onclick="location.href='https://www.weyerhaeuser.com/'"m>
                     Visit Weyerhaeuser
@@ -632,9 +637,9 @@
                 <h3>Quick Links</h3>
                 <div aria-hidden="true" class="item-line"></div>
                 <a href="/html/services.html">Services</a>
-                <a href="/html/contact.html">Sales Team</a>
+                <a href="/html/about.html#sales">Sales Team</a>
                 <a href="/html/about.html">About</a>
-                <a href="/html/products.html">Products</a>
+                <a href="/html/materials.html">Products</a>
                 <a href="/html/rebar-fabrication.html" class="rebar-link">Rebar Fabrication</a>
                 <a href="/html/contact.html">Contact</a>
             </div>
@@ -671,8 +676,9 @@
                         <i aria-hidden="true" class="fas fa-phone"></i>
                     </div>
                     <div class="footer-location-info">
-                        <p class="uppercase">Marysville, WA</p>
-                        <p>(800) 559-8566</p>
+                        <p class="uppercase">Pacific, WA</p>
+                        <p>Phone: (800) 922-2082</p>
+                        <p>Fax: (206) 343-5840</p>
                     </div>
                 </div>
 
@@ -681,10 +687,12 @@
                         <i aria-hidden="true" class="fas fa-phone"></i>
                     </div>
                     <div class="footer-location-info">
-                        <p class="uppercase">Pacific, WA</p>
-                        <p>(800) 922-2082</p>
+                        <p class="uppercase">Marysville, WA</p>
+                        <p>Phone: (800) 559-8566</p>
+                        <p>Fax: (360) 653-7855</p>
                     </div>
                 </div>
+                <p>Email: sales7@<br>valleyconstructionsupply.com</p>
             </div>
         </div>
         <div class="branding">
