fixed jobs application requirements and chnaged the download app file to the newer one

--- a/html/inside-sales.html
+++ b/html/inside-sales.html
@@ -168,7 +168,7 @@
             <li>Route qualified opportunities to the appropriate sales executives for further development and closure.</li>
             <li>Maintain and expand your database of prospects within your assigned territory.</li>
             <li>Working closely with the Inside Sales Staff to provide support by relieving them of 
-                administrative work.   Duties may include order processing/entry, making price quotations, 
+                administrative work. Duties may include order processing/entry, making price quotations, 
                 record keeping, RFP response, product training, or other related tasks. </li>
             <li>Working closely with the purchasing manager to ensure all info is correct before purchasing/creating the sales order’s.</li>
         </ul>
@@ -182,15 +182,16 @@
             <li>Ability to multi-task, prioritize, and manage time effectively.</li>
             <li>Excellent verbal and written communications skills.</li>
             <li>Computer skills. (Familiar with Word/Excel)</li>
+            <li>Able to pass a drug screening</li>
         </ul>
 
         <h2>BENEFITS</h2>
         <P>We offer a competitive benefit package including a 401K plan, medical, dental, life and disability insurance. We are an Equal 
-           Opportunity Employer. Candidates are subject reference checks, criminal background and DMV checks, assessments, and a pre-employment 
+           Opportunity Employer. Candidates are subject to reference checks, criminal background and DMV checks, assessments, and a pre-employment 
            drug screening. EOE/M/F/Vets/Disability.
         </P>
 
-        <button class="solid app-button" type="submit" onclick="window.open('/images/JOB APPLICATION.pdf')">
+        <button class="solid app-button" type="submit" onclick="window.open('/images/General Employment application.pdf')">
             DOWNLOAD APPLICATION
         </button>
 
