--- a/html/outside-sales.html
+++ b/html/outside-sales.html
@@ -158,7 +158,7 @@
         <h2>POSITION OVERVIEW</h2>
         <p>Valley construction supply in Maryville is seeking an experienced, self-motivated outside sales person
                 focusing on acquisition of new customer accounts, as well as helping maintain the relationships
-                we have with existing customers. Salary DOE. E-mail responses only, please no phone calls.</p>
+                we have with existing customers.</p>
 
         <h2>RESPONSIBILITIES</h2>
         <ul>
@@ -173,15 +173,16 @@
 
         <h2>REQUIREMENTS</h2>
         <ul>
-            <li>No fear of tracking down your own leads and customers</li>
-            <li>Ability to maintain relationships with a network of customers, contractors, and suppliers.</li>
-            <li>A service oriented strong work ethic</li>
-            <li>Ability to multi task and maintain control of multiple projects at the same time.</li>
+            <li>High School Diploma or General Education Degree (GED)</li>
+            <li>Have a valid driver's license.</li>
+            <li>Able to pass a drug screening</li>
+            <li>Ability to maintain and curate relationships with a network of customers,
+                contractors, and suppliers</li>
             <li>Strong communication, and time management skills.</li>
-            <li>2 year’s experience in construction</li>
-            <li>Clean driving record</li>
-            <li>Basic computer skills</li>
-            <li>Must be able to pass a drug screening</li>
+            <li>Ability to multi-task, prioritize, and manage time effectively</li>
+            <li>2 years’ experience in construction preferred</li>
+            <li>Strong listening and presentation skills.</li>
+            <li>Computer skills. (Familiar with Word/Excel)</li>
         </ul>
 
         <h2>BENEFITS</h2>
@@ -190,7 +191,7 @@
            drug screening. EOE/M/F/Vets/Disability.
         </P>
 
-        <button class="solid app-button" type="submit" onclick="window.open('/images/JOB APPLICATION.pdf')">
+        <button class="solid app-button" type="submit" onclick="window.open('/images/General Employment Application.pdf')">
             DOWNLOAD APPLICATION
         </button>
 
