--- a/html/warehouse-driver.html
+++ b/html/warehouse-driver.html
@@ -163,18 +163,17 @@
         <p>Responsible for operation of delivery truck to deliver and pick up materials locally. 
            In charge of loading, unloading and placing inventory into warehouse, picking and packing 
            orders for delivery, timely and accurate delivery and/or pickup of goods to specified 
-           locations. Responsible for maintaining inventory control in warehouse. </p>
+           locations.</p>
 
         <h2>RESPONSIBILITIES</h2>
         <ul>
             <li>Operation of delivery truck to deliver and pickup materials making prompt on schedule  
                 deliveries and pickups while notifying management of any delays in the delivery schedule.</li>
-            <li>Maintain vehicle properly and furnish vehicle operation report.</li>
+            <li>Maintain vehicle properly</li>
             <li>Report and record damage to vehicles, product and/or equipment.</li>
             <li>Load and unload trucks and trailers by hand or by use of a hand truck, forklift or dolly.</li>
             <li>Pick and properly fill counter requests, will call, branch transfers and truck shipments.</li>
             <li>Stock and secure items in position on truck to prevent damage during shipments.</li>
-            <li>Prepare bills of lading for shipment. </li>
             <li>Responsible for assisting and assembling product for receiving, storing, shipping and control 
                 of materials in inventory or being sold. </li>
             <li>Prepare return tickets and record damage of faulty materials.</li>
@@ -186,14 +185,11 @@
         <ul>
             <li>High School Diploma or General Education Degree (GED).</li>
             <li>Have a valid driver's license.</li>
-            <li>Six months experience and/or training in this field of work to include warehouse and 
-                or/maintenance experience, fork lift operation experience. </li>
+            <li>Six months experience and/or training in this field of work</li>
             <li>Meet our company's requirements in regard to handling of any and all company vehicles. </li>
             <li>Work both indoors and outside under all weather conditions. </li>
-            <li>Able to lift up to 100 lbs. repeatedly as you will be working with materials on pallets. </li>
-            <li>Able to stand on feet most of the day. </li>
-            <li>-Required to meet Federal Motor Carrier Safety Regulations</li>
-            <li>Maintain an organized warehouse. </li>
+            <li>Able to lift up to 50 lbs. repeatedly as you will be working with materials on pallets. </li>
+            <li>Required to meet Federal Motor Carrier Safety Regulations</li>
         </ul>
 
         <h2>BENEFITS</h2>
@@ -202,7 +198,7 @@
            drug screening. EOE/M/F/Vets/Disability.
         </P>
 
-        <button class="solid app-button" type="submit" onclick="window.open('/images/JOB APPLICATION.pdf')">
+        <button class="solid app-button" type="submit" onclick="window.open('/images/General Employment Application.pdf')">
             DOWNLOAD APPLICATION
         </button>
 
