--- a/html/warehouse.html
+++ b/html/warehouse.html
@@ -170,7 +170,6 @@
             <li>Load and unload trucks and trailers by hand or by use of a hand truck, forklift or dolly. </li>
             <li>Pick and properly fill counter requests, will call, branch transfers and truck shipments.</li>
             <li>Stock and secure items in position on truck to prevent damage during shipments. </li>
-            <li>Prepare bills of lading for shipment. </li>
             <li>Responsible for assisting and assembling product for receiving, storing, shipping and control of  materials in inventory or being sold. </li>
             <li>Prepare return tickets and record damage of faulty materials </li>
             <li>Report out of stock items to warehouse manager. </li>
@@ -184,11 +183,9 @@
             <li>Have a valid driver's license</li>
             <li>Meet our company's requirements in regard to handling of any and all company vehicles.</li>
             <li>Work both indoors and outside under all weather conditions. </li>
-            <li>Able to lift up to 100 lbs. repeatedly as you will be working with materials on pallets.</li>
+            <li>Able to lift up to 50 lbs. repeatedly as you will be working with materials on pallets.</li>
             <li>Able to stand on feet most of the day.</li>
             <li>Required to meet Federal Motor Carrier Safety Regulations </li>
-            <li>Maintain an organized warehouse. </li>
-            <li>Possesses a current medical certification card or ability to obtain one.</li>
         </ul>
 
         <h2>BENEFITS</h2>
@@ -197,7 +194,7 @@
            drug screening. EOE/M/F/Vets/Disability.
         </P>
 
-        <button class="solid app-button" type="submit" onclick="window.open('/images/JOB APPLICATION.pdf')">
+        <button class="solid app-button" type="submit" onclick="window.open('/images/General Employment Application.pdf')">
             DOWNLOAD APPLICATION
         </button>
 
