chnaged advantech logo image

--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
         <div class="partners-logo container"> 
             <a href="https://www.strongtie.com/"><img src="../images/strong-tie.jpg" alt="simpson strong tie logo"></a>
             <a href="https://www.insulfoam.com/"><img src="../images/insulfoam.jpg" alt="insulfoam logo"></a>
-            <a href="http://www.huberwood.com/advantech/advantech-subfloor-adhesive"><img src="../images/advantech.jpg" alt="advantech logo"></a>
+            <a href="http://www.huberwood.com/advantech/advantech-subfloor-adhesive"><img src="../images/advantech-big.png" alt="advantech logo"></a>
             <a href="https://superanchor.com/"><img src="../images/superanchor.png" alt="super anchor logo"></a>
         </div>
     </section>
