--- a/html/about.html
+++ b/html/about.html
@@ -164,14 +164,18 @@
             </div>
             <div class="experience-content">
                 <p><span>35</span></p>
-                <p>Years<br> of Experience</p>
+                <p>+ Years<br> of Experience</p>
                 <h3>Valley's History</h3>
-                <p>In 1982 Cliff Beatty founded Valley Construction Supply with the sole purpose of providing the region’s contractors with a reliable source for building materials at competitive prices. Being built on the ideals of honesty, dedication and leadership, almost 40 years later Valley Construction Supply is still family owned and operated by Cliff’s son, Mark Beatty who continues with the same values. With a fleet of 25 trucks and two conveniently located warehouses, Pacific and Marysville, we are able to provide our customers with next day delivery. Our dedicated sales staff has an average of 25 years’ experience which gives them the ability to react to our customer’s needs. Valley Construction Supply is committed to putting customer service as a top priority in an ever changing building environment.</p>
-                <h3>Need a contractor? We know contractors</h3>
-                <P>If your home builder  needs a quality foundation, excavator or a framing 
-                   contractor we have those strong relationships to pass on, we do the same 
-                   for our long time customers looking for new business and new relationships. If you are in need of a foundation, excavation or framing contractor, our sales staff can
-                   refer high quality contractors in the great Puget Sound region.</P>
+                <p>In 1982 Cliff Beatty founded Valley Construction Supply with the sole purpose of providing the region’s 
+                   contractors with a reliable source for building materials at competitive prices. Being built on the ideals 
+                   of honesty, dedication and leadership, almost 40 years later Valley Construction Supply is still family-owned 
+                   and operated by Cliff’s son, Mark Beatty, who continues with the same values. <br><br>With a fleet of 25 trucks and two 
+                   conveniently located warehouses, Pacific and Marysville, we are able to provide our customers with next-day 
+                   delivery. Our dedicated sales staff has an average of 25 years experience which gives them the ability to react 
+                   to our customer’s needs. Valley Construction Supply is committed to putting customer service as a top priority in 
+                   an ever-changing building environment.</p>
+                <h3>Need a contractor? We know a few.</h3>
+                <P>Our vetted network is the place to start. If you are in need of a quality foundation, excavation or framing contractor, our sales staff can refer high-quality contractors in the greater Puget Sound region. We do the same for our loyal customers seeking the best professionals for their projects.</P>
                 <button class="solid gallery-button"  type="button" onclick="location.href='services.html'">
                     SEE OUR SERVICES
                 </button>
@@ -186,13 +190,15 @@
     <section id="sales">
         <div class="sales-container container">
             <div class="sales-topper">
-                <h2 class="heading-lines"><span>VCS</span><br> SALES TEAM</h2>
-                <p class="sales-description">Here at Valley Construction Supply we believe that the construction 
-                    industry is a relationship business and that our customers deserve personalized, 
-                    hands-on customer service that serves them beyond their construction material needs.
-                </p>
-                <p>If you are located north of the 520 bridge please call the NORTH store.  If you are located south of the 
-                    520 bridge, please call the SOUTH STORE.
+                <div>
+                    <h2 class="heading-lines"><span>VCS</span><br> SALES TEAM</h2>
+                    <p class="sales-description">Here at Valley Construction Supply we believe that the construction 
+                        industry is a relationship business and that our customers deserve personalized, 
+                        hands-on customer service that serves them beyond their construction material needs.
+                    </p>
+                </div>
+                <p class="bridge">Are you located NORTH of the 520 bridge? Please call the NORTH store
+                    Are you located SOUTH of the 520 bridge? Please call the SOUTH store.
                 </p>
             </div>
             <div class="sales-people south-store">
