--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                     <h3>Commercial</h3>
                 </div>
                 <div class="icon-group">
-                    <i aria-hidden="true" class="fas fa-home"></i>
+                    <i aria-hidden="true" class="fas fa-store-alt"></i>
                     <h3>Mixed Use</h3>
                 </div>
             </div>
