--- a/html/about.html
+++ b/html/about.html
@@ -197,8 +197,8 @@
                         hands-on customer service that serves them beyond their construction material needs.
                     </p>
                 </div>
-                <p class="bridge">Are you located NORTH of the 520 bridge?<br> Please call the NORTH store<br>
-                    Are you located SOUTH of the 520 bridge?<br> Please call the SOUTH store.
+                <p class="bridge"><span>Are you located NORTH of the 520 bridge?<br></span> Please call the NORTH store<br>
+                    <span>Are you located SOUTH of the 520 bridge?<br></span> Please call the SOUTH store.
                 </p>
             </div>
             <div class="sales-people south-store">
