--- a/html/about.html
+++ b/html/about.html
@@ -197,7 +197,7 @@
                         hands-on customer service that serves them beyond their construction material needs.
                     </p>
                 </div>
-                <p class="bridge"><span>Are you located NORTH of the 520 bridge?<br></span> Please call the NORTH store<br>
+                <p class="bridge"><span>Are you located NORTH of the 520 bridge?<br></span> Please call the NORTH store<br><br>
                     <span>Are you located SOUTH of the 520 bridge?<br></span> Please call the SOUTH store.
                 </p>
             </div>
